--- a/index.html
+++ b/index.html
@@ -81,6 +81,30 @@
       color: yellow;
     }
   </style>
+
+  
+  <ddd-steps-list ddd-primary="5">
+    <ddd-steps-list-item title="Choose your enrollment period">
+        <p>You will need to complete this before the Fall 2025 semester...</p>
+      <ul>
+          <li>Thing 1</li>
+      </ul>
+    </ddd-steps-list-item>
+    <ddd-steps-list-item title="Choose your enrollment period">
+        <p>You will need to complete this before the Fall 2025 semester...</p>
+      <ul>
+          <li>Thing 1</li>
+      </ul>
+    </ddd-steps-list-item>
+    <ddd-steps-list-item title="Choose your enrollment period">
+        <p>You will need to complete this before the Fall 2025 semester...</p>
+      <ul>
+          <li>Thing 1</li>
+      </ul>
+    </ddd-steps-list-item>
+  </ddd-steps-list>
+
+
   <details id="follow-the-white-rabbit" open>
     <summary>How to Develop</summary>
     <div class="content">
