--- a/index.html
+++ b/index.html
@@ -33,29 +33,14 @@
 </head>
 
 <body>
-
-
-  <ddd-steps-list ddd-primary="5">
-    <ddd-steps-list-item stepTitle="step title">
-      <p>Step description</p>
-        <p>You will need to complete this before the Fall 2025 semester...</p>
-      <ul>
-          <li>Thing 1</li>
-      </ul>
+  <ddd-steps-list ddd-primary>
+    <ddd-steps-list-item>
+      <h3>Apply to Penn State</h3>
+      <p>Complete the online application</p>
     </ddd-steps-list-item>
-    <ddd-steps-list-item title="step 2">
-        <p>You will need to complete this before the Fall 2025 semester...</p>
-      <ul>
-          <li>Thing 1</li>
-      </ul>
-    </ddd-steps-list-item>
-    <ddd-steps-list-item title="Choose your enrollment period">
-        <p>You will need to complete this before the Fall 2025 semester...</p>
-      <ul>
-          <li>Thing 1</li>
-      </ul>
-    </ddd-steps-list-item>
+    <ddd-steps-list-item>
+      <h3>Submit Transcripts</h3>
+      <p>Request transcripts from all previous institutions</p>
   </ddd-steps-list>
-
 </body>
 </html>
