--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
   <h1>Start Planning Your Penn State Experience</h1>
+  <p>Take the next step towards a future at Penn State Altoona. Find admission requirements, tuition and financial aid, and other information to get you ready to apply. </p>
 
   <ddd-steps-list ddd-primary="1E407C">
     <ddd-steps-list-item title="Choose your enrollment period">
